force-app/main/default/objects/P_Persciption__c/P_Persciption__c.object-meta.xml
<CustomObject>
    <label>P_Persciption</label>
    <nameField>
        <label>P_Persciption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P_Persciptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>