force-app/main/default/objects/P_Persciption__c/fields/P_Type__c.field-meta.xml
<CustomField>
    <fullName>P_Type__c</fullName>
    <label>P_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lab Test</fullName>
            </value>
            <value>
                <fullName>Xray</fullName>
            </value>
            <value>
                <fullName>Externa Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>