force-app/main/default/objects/P_Persciption__c/fields/Pat_Perscription__c.field-meta.xml
<CustomField>
    <fullName>Pat_Perscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Perscrption provided by Doctor</description>
    <label>PerscriptionMaster</label>
    <referenceTo>PerscriptionMaster__c</referenceTo>
    <relationshipLabel>P_Persciptions</relationshipLabel>
    <relationshipName>P_Persciptions</relationshipName>
    <type>Lookup</type>
</CustomField>