force-app/main/default/objects/P_Persciption__c/fields/PatientID__c.field-meta.xml
<CustomField>
    <fullName>PatientID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAdmission</label>
    <referenceTo>PAdmission__c</referenceTo>
    <relationshipLabel>P_Persciptions</relationshipLabel>
    <relationshipName>P_Persciptions</relationshipName>
    <type>Lookup</type>
</CustomField>