force-app/main/default/objects/P_Persciption__c/fields/PDetail__c.field-meta.xml
<CustomField>
    <fullName>PDetail__c</fullName>
    <label>PDetail</label>
    <length>20</length>
    <type>Text</type>
</CustomField>