force-app/main/default/objects/P_Persciption__c/fields/PerAmt__c.field-meta.xml
<CustomField>
    <fullName>PerAmt__c</fullName>
    <formula>PerQty__c  *  Pat_Perscription__r.PerRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PerAmt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>