force-app/main/default/objects/P_Persciption__c/fields/PerQty__c.field-meta.xml
<CustomField>
    <fullName>PerQty__c</fullName>
    <label>PerQty</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>