force-app/main/default/objects/P_Persciption__c/fields/PreferedBy__c.field-meta.xml
<CustomField>
    <fullName>PreferedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PreferedBy</label>
    <referenceTo>DoctorList__c</referenceTo>
    <relationshipLabel>P_Persciptions</relationshipLabel>
    <relationshipName>P_Persciptions</relationshipName>
    <type>Lookup</type>
</CustomField>