force-app/main/default/objects/P_Persciption__c/listViews/PrescriptionDetails.listView-meta.xml
<ListView>
    <fullName>PrescriptionDetails</fullName>
    <columns>PatientID__c</columns>
    <columns>PDetail__c</columns>
    <columns>NAME</columns>
    <columns>P_Type__c</columns>
    <columns>Pat_Perscription__c</columns>
    <columns>PerQty__c</columns>
    <columns>PerAmt__c</columns>
    <filterScope>Mine</filterScope>
    <label>PrescriptionDetails</label>
</ListView>